<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.codecaboose.piratetreasurehunt.MainActivity"
    tools:showIn="@layout/activity_main">

    <Button
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:text="@string/play_button"
        android:id="@+id/button"
        android:layout_above="@+id/button2"
        android:layout_centerHorizontal="true"
        android:onClick="go_play"/>

    <Button
        android:layout_width="160dp"
        android:layout_height="80dp"
        android:text="@string/create_button"
        android:id="@+id/button2"
        android:layout_centerVertical="true"
        android:layout_alignLeft="@+id/button3"
        android:layout_alignStart="@+id/button3"
        android:onClick="go_create"/>

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="160dp"
        android:layout_height="50dp"
        android:text="@string/settings_button"
        android:id="@+id/button3"
        android:layout_below="@+id/button2"
        android:layout_alignLeft="@+id/button"
        android:layout_alignStart="@+id/button" />

</RelativeLayout>
