<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/mainbackground"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.codecaboose.piratetreasurehunt.MainActivity"
    tools:showIn="@layout/activity_main_screen">

    <ImageButton
        android:layout_width="140dp"
        android:layout_height="60dp"
        android:text="@string/play_button"
        android:id="@+id/button"
        android:background="@drawable/play"
        android:contentDescription="Play Button"
        android:onClick="go_play"
        android:layout_marginTop="22dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <ImageButton
        android:layout_width="140dp"
        android:layout_height="60dp"
        android:text="@string/create_button"
        android:background="@drawable/create"
        android:id="@+id/button2"
        android:onClick="go_create"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="160dp"
        android:layout_marginLeft="35dp" />

    <ImageButton
        style="?android:attr/buttonStyleSmall"
        android:layout_width="120dp"
        android:layout_height="55dp"
        android:text="@string/settings_button"
        android:background="@drawable/settings"
        android:id="@+id/button3"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />
</RelativeLayout>
